src/test/ui/nll/get_default.polonius.stderr
error[E0502]: cannot borrow `*map` as mutable because it is also borrowed as immutable
  --> $DIR/get_default.rs:32:17
   |
LL |         match map.get() {
   |               --- immutable borrow occurs here
LL |             Some(v) => {
LL |                 map.set(String::new()); // Both AST and MIR error here
   |                 ^^^ mutable borrow occurs here
LL |
LL |                 return v;
   |                        - immutable borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
